adding body to update repo

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     </head>
     <body>
         <h1>Student Bio</h1>
+
+        <div>
+            Adding content to this thing
+        </div>
     </body>
 </html>
